# parampl

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml  quickstart.py
docs/: conf.py  index.html  index.rst  requirements.txt
docs/source/: api.rst
parampl/: __init__.py  core.py  parampl.py  statics.py
