[project]
name = "parampl"
version = "0.3.5"
requires-python = ">=3.13"
description = "Formatting paragraphs for matplotlib text"
authors = ["duckrojo <3063609+duckrojo@users.noreply.github.com>"]
readme = "README.md"
documentation = "https://parampl.readthedocs.io/en/latest/"
repository = "https://github.com/duckrojo/parampl"
dependencies = [
    "matplotlib>=3.10.3",
]

[dependency-groups]
docs = [
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]

